--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,8 +24,18 @@ jobs:
       - name: Clone repository
         run: git clone ${{ secrets.sc }}
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            ffmpeg \
+            imagemagick \
+            libwebp-dev \
+            webp
+          npm install -g pm2
+        
       - name: Test
         run: |
          cd tes
-         go run main.go
+         pm2 start 'go run main.go' --attach
 #
