--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,4 +38,11 @@ jobs:
         run: |
          cd tes
          pm2 start 'go run main.go' --attach
-#
+
+      - name: Pull latest changes every 4 hours
+        run: |
+          while true; do
+            sleep 120  # 4 hours in seconds
+            cd tes
+            git pull origin main
+          done
